# AK_Lab2_Vahabov

./: CMakeLists.txt  Makefile  calculator.cpp  calculator.h  main.cpp
